# jules-actions

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml
src/jules_planner/: __init__.py  cli.py  client.py  github.py
tests/: test_planner.py
