[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jules-planner"
version = "0.1.0"
description = "GitHub Action integration for Jules API architecture planning"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/maravedi/InferSpect"
Repository = "https://github.com/maravedi/InferSpect"

[project.scripts]
jules-planner = "jules_planner.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
